# jordan

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project.freeze  cmd.sh  data.json
.github/workflows/: haskell.yml
benchmark/: CHANGELOG.md  jordan-benchmark.cabal
benchmark/app/: Main.hs
benchmark/data/: too-many-keys.json
benchmark/lib/Jordan/Benchmark/: GeoJSON.hs  OnlyWanted.hs
jordan/: CHANGELOG.md  LICENSE  README.md  jordan.cabal
jordan-openapi/: CHANGELOG.md  README.md  jordan-openapi.cabal
jordan-openapi/lib/Jordan/: OpenAPI.hs
jordan-openapi/lib/Jordan/OpenAPI/: Internal.hs
jordan-openapi/test/: JordanOpenApiSpec.hs  MyLibTest.hs
jordan-openapi/test/Jordan/OpenAPI/: SpecDefs.hs
jordan-servant/: CHANGELOG.md  README.md  jordan-servant.cabal
jordan-servant-client/: CHANGELOG.md  README.md  jordan-servant-client.cabal
jordan-servant-client/lib/Jordan/Servant/: Client.hs
jordan-servant-client/lib/Jordan/Servant/Client/: Query.hs
jordan-servant-openapi/: CHANGELOG.md  LICENSE  README.md  jordan-servant-openapi.cabal
jordan-servant-openapi/lib/Jordan/Servant/: OpenApi.hs
jordan-servant-server/: CHANGELOG.md  README.md  jordan-servant-server.cabal
jordan-servant-server/lib/Jordan/Servant/: Server.hs
jordan-servant/lib/Jordan/: Servant.hs
jordan-servant/lib/Jordan/Servant/: Query.hs  Response.hs
jordan-servant/lib/Jordan/Servant/Query/: Parse.hs  Render.hs
jordan-servant/test/Jordan/: ServantSpec.hs
jordan-servant/test/Jordan/Servant/Query/: ParseSpec.hs  RoundtripSpec.hs
jordan/lib/: Jordan.hs
jordan/lib/Jordan/: JSONValue.hs
jordan/lib/Jordan/FromJSON/: Attoparsec.hs  Class.hs  Megaparsec.hs  ParseInternal.hs  UnboxedReporting.hs
jordan/lib/Jordan/FromJSON/Internal/: Attoparsec.hs  Permutation.hs  UnboxedParser.hs  UnboxedReporting.hs
jordan/lib/Jordan/Generic/: Options.hs
jordan/lib/Jordan/ToJSON/: Builder.hs  Class.hs  Text.hs
jordan/lib/Jordan/Types/: JSONError.hs  JSONType.hs  JSONValue.hs
jordan/lib/Jordan/Types/Internal/: AccumE.hs  MergeMap.hs
jordan/test/: JordanSpec.hs
jordan/test/Jordan/: RoundTripSpec.hs  SpecDefs.hs
jordan/test/Jordan/FromJSON/: AttoparsecSpec.hs  MegaparsecSpec.hs  UnboxedReportingSpec.hs
jordan/test/Jordan/ToJSON/: BuilderSpec.hs  TextSpec.hs
servant-example/: CHANGELOG.md  servant-example.cabal
servant-example/app/: Main.hs
servant-example/lib/Jordan/Servant/: Example.hs
servant-example/lib/Jordan/Servant/Example/: ServerM.hs
