cabal-version:      2.4
name:               jordan-benchmark
version:            0.1.0.0
synopsis:           Benchmarking Jordan

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
      jordan >= 0.2.0.0 && <=3
    , aeson
    , bytestring
    , deepseq
    , text
    , transformers
    , mtl
    , base

library
    import: build-deps
    exposed-modules:
        Jordan.Benchmark.GeoJSON
      , Jordan.Benchmark.OnlyWanted
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:
      -fprof-auto

executable jordan-benchmark
    import: build-deps

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        jordan-benchmark,
        criterion

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -O2
      -threaded
      -fprof-auto
      "-with-rtsopts=-N"
