cabal-version:      3.0
name:               jordan-openapi
version:            0.1.0.0
synopsis:           OpenAPI Definitions for Jordan, Automatically

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
      jordan
    , openapi3
    , text
    , bytestring
    , optics-core
    , containers
    , insert-ordered-containers
    , aeson
    , contravariant

library
    import: build-deps
    exposed-modules:
        Jordan.OpenAPI.Internal
      , Jordan.OpenAPI

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite jordan-openapi-test
    import: build-deps
    build-depends: jordan-openapi
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
