cabal-version:      3.0
name:               jordan-openapi
version:            0.2.0.0
synopsis:           OpenAPI Definitions for Jordan, Automatically

-- A longer description of the package.
description:
  Automatic generation of documentation for Jordan-powered types.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
      aeson  >= 1.5.6 && <2.3
    , bytestring >= 0.10.12 && <0.12
    , containers >= 0.6.2 && <0.7
    , contravariant >= 1.5.5 && <1.6
    , insert-ordered-containers >= 0.2.5 && <0.3
    , jordan >= 0.2.0.0 && <0.3
    , openapi3 >= 3.1.0 && <3.3
    , optics-core >= 0.4 && <0.5
    , text >= 1.2.4 && <1.3
    , insert-ordered-containers >=0.2.3 && <0.3
    , http-types >= 0.12.2 && <0.13
    , base >= 4.14.1 && <4.17

library
    import: build-deps
    exposed-modules:
        Jordan.OpenAPI.Internal
      , Jordan.OpenAPI

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite jordan-openapi-test
    import: build-deps
    build-depends: jordan-openapi
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          JordanOpenApiSpec.hs
    other-modules:
        Jordan.OpenAPI.SpecDefs
    build-depends:
        hspec
