cabal-version:      2.4
name:               jordan-servant-openapi
version:            0.1.0.0
synopsis:           OpenAPI schemas for Jordan-Powered Servant APIs

-- A longer description of the package.
description:
  Jordan Servant OpenAPI provides orphan instances to generate OpenAPI V3 documenation
  for Jordan-Powered Servant APIs.

homepage:           https://github.com/AnthonySuper/jordan

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Super
maintainer:         anthony@noided.media
-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
    , attoparsec >= 0.14.1 && <0.15
    , bytestring >= 0.10.8.1 && <0.12
    , contravariant >= 1.5.5 && <1.6
    , jordan >= 0.2.0.0 && <0.3
    , servant >= 0.18 && <0.20
    , text >= 1.2.3.0 && <1.3
    , scientific >= 0.3.7 && <0.4
    , jordan-servant >= 0.1.0.0 && <0.2
    , servant-openapi3 >= 2.0 && <=2.1
    , jordan-openapi >= 0.2.0 && <= 0.3
    , http-types >= 0.12.2 && <0.13
    , http-media >= 0.7 && <0.9
    , lens >= 4.17 && <5.2
    , transformers >=0.5.5 && <= 0.7
    , openapi3 >= 3.1.0 && <3.3
    , base >= 4.14.1 && <4.17


library
    import: build-deps
    exposed-modules:
        Jordan.Servant.OpenApi

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite jordan-servant-openapi-test
    import: build-deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
