cabal-version:      2.4
name:               jordan-servant-server
version:            0.1.0.0
synopsis:           Servers for Jordan-Based Servant Combinators

-- A longer description of the package.
-- description:
homepage:           https://github.com/AnthonySuper/jordan

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
    , attoparsec >= 0.14.1 && <0.15
    , bytestring >= 0.10.8.1 && <0.12
    , jordan >= 0.1.0.0 && <0.2
    , jordan-servant >= 0.1.0.0 && <0.2
    , servant >= 0.18 && <0.20
    , text >= 1.2.3.0 && <1.3
    , servant-server >= 0.19 && <0.20
    , http-types
    , http-media
    , transformers
    , parallel
    , wai
    , generics-sop

library
    import: build-deps
    exposed-modules:
        Jordan.Servant.Server


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite jordan-servant-server-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
