cabal-version:      2.4
name:               jordan-servant
version:            0.1.0.0
synopsis:           Servant Combinators for Jordan

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
      text
    , bytestring
    , servant >= 0.18
    , jordan
    , attoparsec

library
    import: build-deps
    exposed-modules:
        Jordan.Servant

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite jordan-servant-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
