cabal-version:      2.4
name:               servant-example
version:            0.1.0.0
synopsis:           Example of Jordan with Servant

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Anthony Super
maintainer:         anthony@noided.media

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common build-deps
  build-depends:
      jordan
    , aeson
    , bytestring
    , deepseq
    , text
    , transformers
    , mtl
    , servant
    , servant-server
    , jordan-servant
    , servant-openapi3
    , jordan-servant-server >= 0.1.0.0 && <0.2
    , jordan-servant-openapi >= 0.1.0.0 && <0.2
    , jordan-servant-client >= 0.1.0.0 && <0.2
    , stm
    , openapi3
    , jordan-openapi
    , optics-core
    , optics
    , servant-client
    , http-client
    , wai-extra
    , generics-sop
    , sop-core

library
    import: build-deps
    exposed-modules:
      Jordan.Servant.Example
      Jordan.Servant.Example.ServerM

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable servant-example
    import: build-deps
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        servant-example,
        warp

    hs-source-dirs:   app
    default-language: Haskell2010
